          more reliable and accurate, and hopefully solve some cross platform
          issues.  Bugfixes related to naming particular replicants in a
          'force_pool' attribute.  Lots of documentation updates, including a
          new Introduction.pod file. Fixed the way we detect transaction to 
          make this more reliable and forward looking. Fixed some trouble with
          the way Moose Types are used.  
        - Added call to Pod::Inherit in Makefile.PL -
          currently at author-time only, so we need to add the produced
          .pod files to the MANIFEST

0.08108 2009-07-05 23:15:00 (UTC)
        - Fixed the has_many prefetch with limit/group deficiency -
          it is now possible to select "top 5 commenters" while
          prefetching all their comments
        - New resultsed method count_rs, returns a ::ResultSetColumn
          which in turn returns a single count value
        - Even better support of count with limit
        - New on_connect_call/on_disconnect_call functionality (check
          POD of Storage::DBI)
        - Automatic datetime handling environment/session setup for
          Oracle via connect_call_datetime_setup()
        - count/all on related left-joined empty resultsets now correctly
          returns 0/()
        - Fixed regression when both page and offset are specified on
          a resultset
        - Fixed HRI returning too many empty results on multilevel
          nonexisting prefetch
        - make_column_dirty() now overwrites the deflated value with an
          inflated one if such exists
        - Fixed set_$rel with where restriction deleting rows outside 
          the restriction
        - populate() returns the created objects or an arrayref of the
          created objects depending on scalar vs. list context
        - Fixed find_related on 'single' relationships - the former
          implementation would overspecify the WHERE condition, reporting