@@ -6,10 +6,13 @@ Revision history for DBIx::Class
           'force_pool' attribute.  Lots of documentation updates, including a
           new Introduction.pod file. Fixed the way we detect transaction to 
           make this more reliable and forward looking. Fixed some trouble with
-          the way Moose Types are used.  
+          the way Moose Types are used.
+        - Added new MySQL specific on_connect_call macro 'set_strict_mode'
+          (also known as make_mysql_not_suck_as_much)
         - Added call to Pod::Inherit in Makefile.PL -
           currently at author-time only, so we need to add the produced
           .pod files to the MANIFEST
+
 
 0.08108 2009-07-05 23:15:00 (UTC)
         - Fixed the has_many prefetch with limit/group deficiency -
